--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,23 +12,45 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
   <div class="container">
     <br>
     <br>
     <h1 class="header center orange-text">Caesar-Cipher</h1>
     <div class="row">
-      <form class="col s12">
+      <form class="col s12 offset-m3 m6 l4" action="#">
         <div class="row">
-          <div class="input-field col s12">
-              <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-              <label for="first_name">First Name</label>
+          <p>
+            <input name="action" type="radio" id="text-cipher" />
+            <label for="text-cipher">Cifrar</label>
+          </p>
+          <p>
+            <input name="action" type="radio" id="text-decipher" />
+            <label for="text-decipher">Descifrar</label>
+          </p>
+          <div class="input-field col l12">
+
+          </div>
+          <br>
+        </div>
+        <div class="row">
+          <div class="input-field col s12 l12">
+            <input placeholder="" id="input-text" type="text" class="validate">
+            <label for="first_name">Ingrese frase</label>
           </div>
         </div>
       </form>
     </div>
+    <div class="row">
+      <div id="text-result">
+        
+      </div>
+    </div>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
+
 </html>
