--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <input placeholder="" id="input-text" type="text" class="validate">
             <label for="first_name">Ingrese frase</label>
           </div>
+          <input type="button" value="Enviar" class="btn waves-effect waves-green">
         </div>
       </form>
     </div>
