agregando funcionalidad y ultimos modificaciones al html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <h1 class="header center orange-text">Caesar-Cipher</h1>
     <div class="row">
-      <form class="col s12 offset-m3 m6 l4" action="#">
+      <form class="col s12 offset-m3 m6 l4" action="#" id="form-cipher">
         <div class="row">
           <p>
             <input name="action" type="radio" id="text-cipher" value="cipher" />
@@ -36,6 +36,7 @@
             <input placeholder="" id="input-text" type="text" >
           </div>
           <input type="button" id="button-action" value="Enviar" class="btn waves-effect waves-green" disabled="true">
+          <input type="button" id="button-clean" value="Limpiar" class="btn waves-effect waves-green" >
         </div>
       </form>
     </div>
