modificando ruta de images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     <div class="row">
       <div class="col s12 offset-l3 l6 offset-m3 m6 center-align">
-        <img src="assets/es6.png" alt="es6" class="responsive-img">
+        <img src="assets/images/es6.png" alt="es6" class="responsive-img">
       </div>
     </div>
     <h1 class="header center-align orange-text">Caesar-Cipher-ES6</h1>
